# guanaco

./: .pre-commit-config.yaml  FredRalph_p1.toml  FredRalph_p2.toml  FredRalph_p3.toml  JungAurelius_p3.toml  README.md  WarrenRay_p3.toml  debate_about_philosophy.ipynb  launch_debates.py  main.py  output.txt  proc_generate_philosophy_debate.py  pyproject.toml  readme.md
cfgs/: FredRalph_dialogue.toml  FredRalph_dialogue_04052023_132450.txt  FredRalph_p1.toml  FredRalph_p2.toml  FredRalph_p3.toml  FredRalph_p5.toml  FredRalph_p5_03052023_184031.txt  FredRalph_p5_04052023_125456.txt  JungAuerilius_dialogue.toml  JungAuerilius_dialogue_04052023_132500.txt  JungAurelius_dialogue_vic.toml  JungAurelius_p3.toml  WarrenRay_p3.toml  WarrenRay_test.toml  WarrenRay_v5.toml  conversation_gen_200623_w_keep
frontend/: gradio.py  ui.py
src/: segments.py  temperature.py  ui.py
src/vicuna/: segments.py
