[tool.poetry]
name = "guanaco"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyllamacpp = "2.1.2"
tqdm = "^4.65.0"
nltk = "^3.8.1"
absl-py = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
